--- a/3. image_similarity.ipynb
+++ b/3. image_similarity.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Written map task: analysis"
+    "# 3. Image similarity measures"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Juan Berrios | juanberrios@pitt.edu | Last updated: October 26, 2022"
+    "Juan Berrios | juanberrios@pitt.edu | Last updated: October 28, 2022"
    ]
   },
   {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
